--- a/instag/templates/instagram/single_post.html
+++ b/instag/templates/instagram/single_post.html
@@ -1,6 +1,5 @@
 {% load static %}
 {% load crispy_forms_tags %}
-{% block content %}
 <div class="container" style="margin-top:7%;">
     <div class="card">
         <div class="row">
@@ -9,8 +8,7 @@
                 <img src="{{image.image.url}}" style="visibility: hidden;" class="card-img" width="100%"/>
             </div>
             <div class="col-md-3 mt-2">
-      {% extends 'instagram/base.html' %}
-          <img src="{{image.user.profile_picture.url}}" class="rounded-circle border ml-3 mt-2  mr-3"
+          <img src="" class="rounded-circle border ml-3 mt-2  mr-3"
                      alt="{{image.user.user.username}}" width="35" height="35">
                 <a href="{% url 'user_profile' image.user.user.username %}" class="mt-4 user">{{image.user.user.username | title}}</a>
 
@@ -45,4 +43,3 @@
         </div>
     </div>
 </div>
-{% endblock %}
