--- a/instag/templates/instagram/single_post.html
+++ b/instag/templates/instagram/single_post.html
@@ -8,7 +8,7 @@
         <div class="row">
             <div class="col-md-8 ml-3"
                  >
-                <img src="{{image.image.url}}" style="" class="card-img" width="100%"/>
+                <img src="{{image.image.url}}" class="card-img" width="100%"/>
             </div>
             <div class="col-md-3 mt-2">
           <img src="" class="rounded-circle border ml-3 mt-2  mr-3"
