--- a/instag/templates/instagram/profile.html
+++ b/instag/templates/instagram/profile.html
@@ -36,7 +36,7 @@
                     <div class="modal-body">
                         <a class="D-block mx-auto" href="">Change Password</a>
                         <hr>
-                        <a class="D-block mx-auto" href="{% url 'logout' %}">Log Out</a>
+                        <a class="D-block mx-auto" href="{% url 'logout' %}?next={% url 'login' %}">Log Out</a>
                         <hr>
                         <a class="D-block mx-auto" href="" data-dismiss="modal">Close</a>
                     </div>
